# glimmer

./: Cargo.toml
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs
crates/glimmer/: Cargo.toml
crates/glimmer/examples/: sandbox.rs  window.rs
crates/graphics/: Cargo.toml  build.rs
crates/graphics/shaders/: polygon.hlsl  rounded_rect.hlsl  ui.hlsl
crates/graphics/src/: dx12.rs  lib.rs  pixel_buffer.rs  render_graph.rs
crates/graphics/src/dx12/: dx.rs  graphics.rs  mod.rs  queue.rs  surface.rs  temp_allocator.rs
crates/graphics/src/memory/: block_allocator.rs  mod.rs  temp_allocator.rs
crates/plinth/: Cargo.toml
crates/plinth/src/: input.rs  lib.rs  window.rs
crates/plinth/src/dx12/: dx.rs  mod.rs  queue.rs
crates/plinth/src/graphics/: color.rs  mod.rs  pixel_buffer.rs  render_graph.rs
crates/plinth/src/platform/: mod.rs
crates/plinth/src/platform/win32/: dx.rs  mod.rs  surface.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: canvas.rs  image.rs  lib.rs  rect.rs
crates/renderer/src/backend/: dx12.rs  linear_allocator.rs  mod.rs  ring_allocator.rs
crates/renderer/src/backend/dx12/: copy_queue.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/structures/src/: flagvec.rs  generational_pool.rs  lib.rs
crates/visuals/: Cargo.toml
crates/visuals/src/: graphics.rs  pixel_buffer.rs
crates/visuals/src/memory/: block_allocator.rs  temp_allocator.rs
