[package]
name    = "glimmer"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry    = { path = "../geometry" }
plinth      = { path = "../plinth" }
widgets     = { path = "../widgets" }
raw-window-handle = "0.5.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }

[[example]]
name = "sandbox"

[[example]]
name = "window"
