[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = { path = "../geometry" }
raw-window-handle = "0.5.0"
smallvec = { version = "1.10.0", features = ["union", "const_generics"] }

[dependencies.windows]
# version = "0.43"
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
]

[build-dependencies.windows]
# version = "0.43"
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
]
