[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = { path = "../geometry" }
structures = { path = "../structures" }

parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
smallvec = { version = "1.10", features = ["union", "const_generics"] }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
]

[build-dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
]
