[package]
name = "visuals"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = { path = "../geometry" }
structures = { path = "../structures" }

winit = "0.27.5"
bitflags = "1.3.2"
raw-window-handle = "0.5.0"
smallvec = { version = "1.10", features = ["union", "const_generics"] }
png = "0.17.7"

[dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
]

[build-dependencies.windows]
version = "0.44"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
]
